--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,36 +8,34 @@
    sorted by the dependencies. Also, the first two lines of the file are required by Jekyll.
  */
 
-@import
-    "vendor/breakpoint/breakpoint",
+@import "vendor/breakpoint/breakpoint";
+@import "themes";
+@import "theme/{{ site.site_theme | default: 'default' | append: '_light' }}";
+@import "theme/{{ site.site_theme | default: 'default' | append: '_dark' }}";
 
-    "themes",
-    "theme/{{ site.site_theme | default: 'default' | append: '_light' }}",
-    "theme/{{ site.site_theme | default: 'default' | append: '_dark' }}",
+@import "include/mixins";
+@import "vendor/susy/susy";
 
-    "include/mixins",
-    "vendor/susy/susy",
+@import "layout/reset";
+@import "layout/base";
 
-    "layout/reset",
-    "layout/base",
+@import "include/utilities";
+@import "layout/tables";
+@import "layout/buttons";
+@import "layout/notices";
+@import "layout/masthead";
+@import "layout/navigation";
+@import "layout/footer";
+@import "syntax";
 
-    "include/utilities",
-    "layout/tables",
-    "layout/buttons",
-    "layout/notices",
-    "layout/masthead",
-    "layout/navigation",
-    "layout/footer",
-    "syntax",
+@import "layout/forms";
 
-    "layout/forms",
+@import "layout/page";
+@import "layout/archive";
+@import "layout/sidebar";
+@import "layout/json_cv";
+@import "layout/custom";
 
-    "layout/page",
-    "layout/archive",
-    "layout/sidebar",
-    "layout/json_cv",
-
-    "vendor/font-awesome/fontawesome",
-    "vendor/font-awesome/solid",
-    "vendor/font-awesome/brands"
-;
+@import "vendor/font-awesome/fontawesome";
+@import "vendor/font-awesome/solid";
+@import "vendor/font-awesome/brands";
